FINT-52 FINT-46: Fix error event topic name